# telegram-bot-mcp

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  check.yml  ci.yml  release.yml
src/: bot_api.rs  cli.rs  main.rs  server.rs
src/tools/: bot.rs  business.rs  chats.rs  editing.rs  forum.rs  games.rs  inline.rs  media.rs  messages.rs  mod.rs  other.rs  payments.rs  stickers.rs  stories.rs  updates.rs
