[package]
name = "telegram-bot-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Telegram Bot API — manage bots, channels, payments (Stars)"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
