[package]
name = "telegram-bot-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server & CLI for Telegram Bot API — 166 methods, full API coverage including business, stories, gifts, payments"
license = "MIT"
repository = "https://github.com/0xDEADBEEF-all/telegram-bot-mcp"
homepage = "https://github.com/0xDEADBEEF-all/telegram-bot-mcp"
keywords = ["telegram", "bot-api", "mcp", "cli", "bot"]
categories = ["command-line-utilities", "web-programming::http-client"]
readme = "README.md"

[dependencies]
rmcp = { version = "1.3.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
schemars = "1"
